Moved artifact into "efs" subgroup.