@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>com.github.keim-hs-esslingen</groupId>
+        <groupId>com.github.keim-hs-esslingen.efs</groupId>
         <artifactId>efs-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath/> <!-- skip parent lookup in parent directory. -->
     </parent>
     
-    <groupId>com.github.keim-hs-esslingen</groupId>
+    <groupId>com.github.keim-hs-esslingen.efs</groupId>
     <artifactId>trias-adapter</artifactId>
     <version>1.2.1-SNAPSHOT</version>
     
@@ -53,7 +53,7 @@
     
     <dependencies>
         <dependency>
-            <groupId>com.github.keim-hs-esslingen</groupId>
+            <groupId>com.github.keim-hs-esslingen.efs</groupId>
             <artifactId>middleware-core</artifactId>
             <version>${middleware-core.version}</version>
         </dependency>
@@ -95,7 +95,6 @@
                 <version>2.22.2</version>
                 <configuration>
                     <argLine>-XX:+ShowCodeDetailsInExceptionMessages</argLine>
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
